<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@drawable/app_background"
    tools:context=".SensorInformationActivity">

    <TextView
        android:id="@+id/setTime"
        android:layout_width="280dp"
        android:textStyle="bold|italic"
        android:gravity="center"
        android:textSize="26sp"
        android:text="@string/sensor_description"
        android:textColor="@color/white"
        android:layout_height="70dp"
        />

    <TextView
        android:id="@+id/textViewTemperatureSensor"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/temperature_sensor" />

    <Button
        android:id="@+id/temperatureInfoButton"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginStart="200dp"
        android:layout_marginEnd="120dp"
        android:textColor="@color/black"
        android:layout_marginTop="-50dp"
        android:textSize="13sp"
        android:text="@string/show_description" />

    <TextView
        android:id="@+id/textViewGasSensor"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/gas_senzor" />

    <Button
        android:id="@+id/gasInfoButton"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginStart="200dp"
        android:layout_marginEnd="120dp"
        android:textColor="@color/black"
        android:layout_marginTop="-50dp"
        android:textSize="13sp"
        android:text="@string/show_description" />



    <TextView
        android:id="@+id/textViewFlameSensor"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/flame_sensor" />

    <Button
        android:id="@+id/flameInfoButton"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginStart="200dp"
        android:layout_marginEnd="120dp"
        android:textColor="@color/black"
        android:layout_marginTop="-50dp"
        android:textSize="13sp"
        android:text="@string/show_description" />

    <TextView
        android:id="@+id/textViewVibrationsSensor"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="130dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/vibrations_sensor" />

    <Button
        android:id="@+id/vibrationInfoButton"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginStart="200dp"
        android:layout_marginEnd="120dp"
        android:textColor="@color/black"
        android:layout_marginTop="-50dp"
        android:textSize="13sp"
        android:text="@string/show_description" />

    <TextView
        android:id="@+id/textViewMotionSensor"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/motion_sensor" />

    <Button
        android:id="@+id/motionInfoButton"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginStart="200dp"
        android:layout_marginEnd="120dp"
        android:textColor="@color/black"
        android:layout_marginTop="-50dp"
        android:textSize="13sp"
        android:text="@string/show_description" />


    <Button
        android:id="@+id/backButton2"
        android:background="@color/purple"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/back" />
</LinearLayout>