<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@drawable/app_background"
    tools:context=".SensorValuesActivity">

    <TextView
        android:id="@+id/realTimeSensorValues"
        android:layout_width="300dp"
        android:textStyle="bold|italic"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/realtime_sensor_values"
        android:textColor="@color/white"
        android:layout_height="60dp"
        />

    <TextView
        android:id="@+id/textViewTemperatureSensor"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:text="@string/temperature1" />
    <TextView
        android:id="@+id/temperatureSensor"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginStart="205dp"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="-50dp"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:text="@string/loading" />


    <TextView
        android:id="@+id/textViewGasSensor"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="120dp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:text="@string/gas_ppm" />
    <TextView
        android:id="@+id/gasSensor"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginStart="205dp"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="-50dp"
        android:textSize="25sp"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:text="@string/loading" />


    <TextView
        android:id="@+id/textViewHumiditySensor"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:text="@string/humidity" />
    <TextView
        android:id="@+id/humiditySensor"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginStart="205dp"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="-50dp"
        android:textSize="25sp"
        android:textColor="@color/green"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/loading" />


    <TextView
        android:id="@+id/textViewFireSensor"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:text="@string/flames" />
    <TextView
        android:id="@+id/fireSensor"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="205dp"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="-50dp"
        android:textSize="25sp"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/loading" />


    <TextView
        android:id="@+id/textViewVibrationsSensor"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:text="@string/vibrations" />
    <TextView
        android:id="@+id/vibrationSensor"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="205dp"
        android:gravity="center"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="-50dp"
        android:textSize="25sp"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:text="@string/loading" />
    <TextView
        android:id="@+id/textViewMotionSensor"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="120dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:text="@string/motion" />
    <TextView
        android:id="@+id/motionSensor"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="205dp"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="-50dp"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:text="@string/loading" />


    <Button
        android:id="@+id/backButton"
        android:background="@color/purple"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/back" />



</LinearLayout>