<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@drawable/app_background"
    tools:context=".GasSensorInfoActivity">

    <TextView
        android:id="@+id/gasTextView"
        android:textStyle="bold|italic"
        android:layout_width="280dp"
        android:gravity="center"
        android:textSize="26sp"
        android:text="@string/gas_sensor_description"
        android:textColor="@color/white"
        android:layout_height="70dp"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250sp"
        android:layout_height="150sp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/mq2" />

    <TextView
    android:id="@+id/dht11_description"
    android:layout_width="350dp"
    android:gravity="center"
    android:textSize="21sp"
    android:text="@string/the_arduino_mq2_sensor_allows_users_to_detect_gas_leaks_and_ensure_air_quality_this_versatile_sensor_identifies_gases_such_as_lpg_methane_smoke_and_carbon_monoxide_making_it_ideal_for_kitchens_garages_and_other_areas_prone_to_gas_accumulation_users_receive_real_time_data_and_alerts_for_maintaining_a_safe_living_environment"
    android:textColor="@color/white"
    android:layout_height="400dp"
    />

    <Button
        android:id="@+id/backButton"
        android:background="@color/purple"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="0dp"
        android:text="@string/back" />
</LinearLayout>